<resources>
    <string name="app_name">REMITnGO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">REMITnGO</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_personal_information">Personal Information</string>
    <string name="menu_address">Home Address</string>
    <string name="menu_email">Email</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_mobile_number">Mobile Number</string>
    <string name="menu_card">Debit Card</string>
    <string name="menu_choose_recipient">Choose Recipient</string>
    <string name="menu_beneficiary">Beneficiary</string>
    <string name="menu_save_beneficiary">Save Beneficiary</string>
    <string name="menu_choose_bank">Choose Bank</string>
    <string name="menu_recipient_details">Recipient Details</string>
    <string name="menu_bank_details">Bank Details</string>
    <string name="menu_confirm_transfer">Confirm Transfer</string>
    <string name="menu_transaction">Transaction History</string>
    <string name="menu_transaction_history">Transaction History</string>
    <string name="menu_cancel_request">Cancel Request</string>
    <string name="menu_generate_query">Generate Query</string>
    <string name="menu_update_query">Update Query</string>
    <string name="menu_add_query">Add Query</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_notification">Notification History</string>
    <string name="menu_address_verify">Address Verification</string>
    <string name="menu_update_documents">Update Document</string>
    <string name="menu_sign_in_sign_up">REMITnGO</string>
    <string name="menu_login">Log in</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="term_and_condition">By signing up you agree to our Terms of Use and Privacy Policy.</string>
    <string name="recipient_name_as_bank">Recipient name should be legal name, as registered with bank.</string>
    <string name="recipient_name_as_wallet">Recipient name should be legal name, as registered with wallet service.</string>
    <string name="bank_transfer_txt">Please double check the account information, as we may not be able to refund the transfer once it has been sent.</string>
    <string name="wallet_transfer_txt">Please double check the account information, as we may not be able to refund the transfer once it has been sent.</string>
    <string name="extra_percentage">Recipients get an extra 2.5% on their transfer!</string>

</resources>